--- a/frontend/src/components/Nav/Navbar.module.css
+++ b/frontend/src/components/Nav/Navbar.module.css
@@ -59,7 +59,7 @@
 
 .nav a.current,
 .nav a:hover {
-  color: #778477;
+  color: #2B3133;
 }
 
 .nav .name{
@@ -72,7 +72,7 @@
 }
 
 .nav .order{
-    color: #FDB496;
+    color: #F1DBD2;
     font-family: "Instrument Serif", serif;
     font-weight: 400;
     font-style: normal;
