--- a/frontend/src/pages/AboutCafe/AboutCafe.module.css
+++ b/frontend/src/pages/AboutCafe/AboutCafe.module.css
@@ -3,6 +3,9 @@
   flex-direction: column;
   min-height: 100vh;
   text-align: center;
+  background-color: #F3F1EB;
+  font-family: "Kelly Slab", serif;
+  font-weight: 400;
 }
 
 .content {
@@ -11,18 +14,38 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 20px;
 }
 
 .welcomeText {
   font-size: 3rem;
   font-weight: bold;
   margin-bottom: 20px;
+  margin-top: 15vh;
+  font-style: bold;
 }
+
+.text_typical {
+  font-style: normal;
+  font-size: 1rem;
+}
+
+.text_typical1 {
+  font-style: normal;
+  font-size: 1.5rem;
+}
+
 
 .addressText {
   font-size: 1.5rem;
   color: #555;
+}
+
+.title {
+   color: #F3F1EB;
+   background-color: rgb(110, 121, 110);
+   width: 100%;
+   padding: 15px;
+   font-size: 2rem;
 }
 
 .footer {
@@ -58,4 +81,10 @@
 
 .icon:hover {
   opacity: 0.8;
+}
+
+.image1 {
+  width: 190px;
+  height: 190px;
+  object-fit: cover;
 }
