--- a/frontend/src/pages/ChatAI/ChatAI.module.css
+++ b/frontend/src/pages/ChatAI/ChatAI.module.css
@@ -1,18 +1,25 @@
 .container_body {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  padding: 20px;
-  background-color: #778477;
+  height: 90vh;
+  padding-top: 10px;
+  background-color: #F3F1EB;
+  position: relative;
+  align-items: center;
+  justify-content: center;
 }
 
 .container {
-  max-width: 95%;
+  max-width: 100%;
+  max-width: 900px;
   margin-top: 10vh;
   display: flex;
   flex-direction: column;
-  height: 80vh;
+  height: calc(80vh - 80px);
   padding: 20px;
+  overflow-y: auto;
+  align-items: none;
+  justify-content: none;
 }
 
 .chatWindow {
@@ -31,6 +38,9 @@
   margin-bottom: 10px;
   border-radius: 8px;
   word-wrap: break-word;
+  font-family: "Kelly Slab", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .userMessage {
@@ -52,23 +62,36 @@
   font-style: italic;
 }
 
-.inputContainer {
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #778477;
+  padding: 10px 20px;
+  border-top: 1px solid #ddd;
   display: flex;
   gap: 10px;
-  height: 6vh;
+  align-items: center;
+  justify-content: center;
+  height: 12vh;
 }
 
 .inputField {
   flex: 1;
   padding: 10px;
   border: 1px solid #ddd;
-  border-radius: 8px;
+  border-radius: 15px;
+  max-width: 600px;
+  font-family: "Kelly Slab", serif;
+  font-weight: 400;
+  font-style: normal;
+  height: 30%;
+  font-size: 0.9rem;
 }
 
 .sendButton {
-  padding: 10px 20px;
-  padding-left: 5%;
-  padding-right: 5%;
+  padding: 10px 15px;
   background-color: #D7E2D7;
   color: #2B3133;
   border: none;
@@ -77,7 +100,7 @@
 }
 
 .sendButton:hover {
-  background-color: #0056b3;
+  background-color: #ff6f61;
 }
 
 .dishesContainer {
@@ -89,20 +112,87 @@
 }
 
 .dish {
+  display: flex;
+  align-items: center;
   margin-bottom: 10px;
   padding: 10px;
   background-color: #fff;
   border-radius: 8px;
   border: 1px solid #eee;
+  font-family: "Kelly Slab", serif;
+  font-weight: 400;
+  font-style: bold;
 }
 
-.dish h3 {
+.image {
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
+  object-fit: cover;
+  margin-right: 20px;
+}
+
+.dishInfo {
+  flex: 1;
+}
+
+.dishInfo h3 {
   margin: 0;
   font-size: 1.2rem;
   color: #333;
 }
 
-.dish p {
+.dishInfo p {
   margin: 5px 0;
   color: #666;
+}
+
+.dishButtons {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+  align-items: center;
+  justify-content: center;
+}
+
+.addButton {
+  padding: 5px 10px;
+  background-color: #D7E2D7;
+  color: #2B3133;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-family: "Kelly Slab", serif;
+  font-weight: 400;
+  font-style: bold;
+  font-size: 0.7rem;
+}
+
+.detailsButton {
+  padding: 5px 7px;
+  background-color: #FFDACA;
+  color: #2B3133;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  font-family: "Kelly Slab", serif;
+  font-weight: 400;
+  font-style: bold;
+  font-size: 0.7rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.voiceButton {
+  padding: 5px;
+  background-color: #D7E2D7;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1.2rem;
+}
+
+.voiceButton.active {
+  background-color: #ff6f61;
 }
