--- a/frontend/src/pages/OrderPage/OrderPage.module.css
+++ b/frontend/src/pages/OrderPage/OrderPage.module.css
@@ -6,16 +6,15 @@
   margin: 0 auto;
   margin-top: 7vh;
   background-color: #F3F1EB;
+  display: flex;
   align-items: center;
   justify-content: center;
 }
 
-
 .container {
   font-family: Arial, sans-serif;
-  max-width: 800px;
+  width: 80%;
   margin: 0 auto;
-  padding-top: 1vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -25,59 +24,89 @@
 .item {
   border: 1px solid #ccc;
   width: 85%;
-  height: 20vh;
-  padding: 10px;
-  margin-bottom: 20px;
-  border-radius: 40px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+  max-width: 500px;
+  padding: 20px 30px;
+  margin-top: 5vh;
+  border-radius: 20px;
   background-color: #D9D9D9;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.topSection {
+  display: flex;
+  align-items: center;
+  gap: 20px;
   justify-content: space-between;
-  padding-left: 20px;
-  padding-top: 30px;
+}
+
+.image {
+  width: 60%;
+  height: 150px;
+  border-radius: 20px;
+  object-fit: cover;
+  margin-right: 15px;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  justify-content: center;
+}
+
+.cost {
+  font-family: "Kelly Slab", serif;
+  font-weight: 400;
+  font-style: bold;
+  font-size: 1.5rem;
+}
+
+.quantity {
+  font-family: "Kelly Slab", serif;
+  font-weight: 400;
+  font-size: 1.2rem;
 }
 
 .quantityControl {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-right: 10px;
+  gap: 10px;
 }
 
-.quantityControl > * {
-  margin-right: 10px;
-}
-
-.quantityControl > *:last-child {
-  margin-right: 0;
-}
-
-.button {
-  background-color: #2B3133;
+.button1 {
+  padding: 5px 7px;
+  background-color: #778477;
   color: white;
   border: none;
+  padding: 7px 15px;
   border-radius: 10px;
   cursor: pointer;
-  text-decoration: none;
   font-family: "Kelly Slab", serif;
   font-weight: 400;
   font-style: bold;
   font-size: 1rem;
-  width: 30%;
-  height: 30%;
 }
 
-.button:disabled {
-  background-color: #ccc;
-  cursor: not-allowed;
-}
-
-.column3 {
+.bottomSection {
   display: flex;
-  flex-direction: column; /* Элементы в колонку */
-  align-items: flex-start; /* Выравниваем элементы по левому краю */
-  gap: 10px; /* Расстояние между кнопками */
+  flex-direction: column;
+  gap: 10px;
+}
+
+.name {
+  font-family: "Kelly Slab", serif;
+  font-weight: 400;
+  font-style: bold;
+  font-size: 1.3rem;
+  text-align: left;
+}
+
+.buttonsRow {
+  display: flex;
+  gap: 10px;
+  justify-content: space-between;
 }
 
 .removeButton {
@@ -89,10 +118,8 @@
   font-family: "Kelly Slab", serif;
   font-weight: 400;
   font-style: bold;
-  font-size: 0.8rem;
-  width: 100%; /* Занимает всю ширину контейнера */
-  padding: 6px; /* Добавляем отступы */
-  text-align: center; /* Выравниваем текст по центру */
+  font-size: 1rem;
+  padding: 10px 20px;
 }
 
 .button {
@@ -106,62 +133,27 @@
   font-weight: 400;
   font-style: bold;
   font-size: 1rem;
-  width: 90%; /* Занимает всю ширину контейнера */
-  padding: 7px; /* Добавляем отступы */
-  text-align: center; /* Выравниваем текст по центру */
-}
-
-.quantity {
-  font-weight: bold;
-  font-family: "Kelly Slab", serif;
-  font-weight: 400;
-  font-size: 1rem;
-}
-
-.cost {
-  font-family: "Kelly Slab", serif;
-  font-weight: 400;
-  font-style: bold;
-  font-size: 1.5rem;
-  margin-bottom: 10px; /* Отступ снизу для цены */
-}
-
-.column1 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start; /* Выравниваем элементы по верхнему краю */
-  height: 100%; /* Занимает всю высоту контейнера */
-  padding-top: 10px; /* Отступ сверху */
-}
-
-.column {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between; /* Равномерное распределение по высоте */
-  height: 100%; /* Занимает всю высоту контейнера */
-  padding-bottom: 20px;
-  align-items: center;
+  padding: 10px 20px;
+  text-align: center;
 }
 
 .total {
-  margin-top: 5px;
+  margin-top: 20px;
   text-align: center;
   font-family: "Kelly Slab", serif;
   font-weight: 400;
   font-style: bold;
-  font-size: 2rem;
+  font-size: 1.6rem;
 }
 
 .orderButton {
-  width: 60%;
-  padding: 15px;
+  padding: 15px 30px;
   background-color: #2B3133;
   color: white;
   border: none;
-  border-radius: 15px;
+  border-radius: 20px;
   cursor: pointer;
-  margin-bottom: 10vh;
+  margin-bottom: 10%;
   font-family: "Kelly Slab", serif;
   font-weight: 400;
   font-style: bold;
@@ -181,47 +173,13 @@
   font-family: "Kelly Slab", serif;
   font-weight: 400;
   font-style: bold;
-  font-size: 2.6rem;
-  margin-top: 10vh;
-}
-
-.image {
-    width: 23vh;
-    height: 23vh;
-    border-radius: 30px;
-    overflow: hidden;
-    object-fit: cover;
-    margin-right: 20px;
+  font-size: 2rem;
+  margin-top: 7vh;
 }
 
 .raw {
-    flex-direction: raw;
-}
-
-.name {
-  font-family: "Kelly Slab", serif;
-  font-weight: 400;
-  font-style: bold;
-  font-size: clamp(1rem, 4vw, 1.7rem);
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  line-clamp: 2;
-  max-height: 12vh;
-  text-wrap: balance;
-}
-
-.button1 {
-  padding: 9px 13px;
-  background-color: #778477;
-  color: white;
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-  text-decoration: none;
-  font-family: "Kelly Slab", serif;
-  font-weight: 400;
-  font-style: bold;
-  font-size: 0.8rem;
+  display: flex;
+  flex-direction: raw;
+  justify-content: space-between;
+  width: 100%;
 }
