--- a/frontend/src/pages/ItemDetail/ItemDetail.module.css
+++ b/frontend/src/pages/ItemDetail/ItemDetail.module.css
@@ -1,5 +1,4 @@
 .container {
-  font-family: 'Arial, sans-serif';
   width: 100%;
   margin: 0 auto;
   text-align: center;
@@ -36,14 +35,12 @@
   background: rgba(217, 217, 217, 0.8);
   color: white;
   padding-left: 20px;
-  width: 97%;
+  width: 100%;
   margin-bottom: 10%;
-  font-family: "Amatic SC", serif;
-  font-weight: 600;
-  text-align: left;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0px;
 }
 
 .dishInfo {
@@ -57,6 +54,7 @@
   font-size: 2rem;
   color: black;
   font-style: normal;
+  padding-left: 10px;
 }
 
 .dishPrice {
@@ -66,6 +64,7 @@
   font-family: "Kelly Slab", serif;
   font-weight: 500;
   font-style: bold;
+  padding-left: 10px;
 }
 
 .cuisineSection {
@@ -82,7 +81,7 @@
 }
 
 .cuisine {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   color: #7A0000;
   font-family: "Kelly Slab", serif;
   font-weight: 400;
@@ -204,6 +203,20 @@
   margin-bottom: 5px;
 }
 
+.quantityButton {
+  padding: 5px 7px;
+  background-color: #778477;
+  color: white;
+  border: none;
+  padding: 7px 15px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-family: "Kelly Slab", serif;
+  font-weight: 400;
+  font-style: bold;
+  font-size: 1rem;
+}
+
 .padding {
   padding-left: 50px;
 }
@@ -214,7 +227,28 @@
     padding: 15px;
   }
 
+  .dishName {
+    font-size: 1.1rem;
+  }
+
   .info1 {
     padding: 15px;
+  }
+}
+
+.quantity {
+  font-size: 1.2rem;
+  color: black;
+  padding-left: 7px;
+  padding-right: 7px;
+  font-family: "Kelly Slab", serif;
+  font-weight: 400;
+  font-style: bold;
+}
+
+
+@media (max-width: 480px) {
+  .dishName {
+    font-size: 1rem;
   }
 }
