--- a/frontend/src/pages/AboutCafe/AboutCafe.module.css
+++ b/frontend/src/pages/AboutCafe/AboutCafe.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   min-height: 100vh;
   text-align: center;
-  background-color: #F3F1EB;
+  background-color: #FDFAF0;
   font-family: "Kelly Slab", serif;
   font-weight: 400;
 }
@@ -96,6 +96,10 @@
 
 .icon:hover {
   opacity: 0.8;
+}
+
+.image {
+  margin-bottom: 30px;
 }
 
 .image1 {
