--- a/frontend/src/pages/ItemList/ItemList.module.css
+++ b/frontend/src/pages/ItemList/ItemList.module.css
@@ -114,7 +114,7 @@
 
 .button {
   padding: 5px 10px;
-  background-color: none;
+  background-color: #FDFAF0;
   color: #2b3133;
   text-decoration: none;
   border-radius: 5px;
