--- a/frontend/src/pages/StartPage/StartPage.module.css
+++ b/frontend/src/pages/StartPage/StartPage.module.css
@@ -128,3 +128,33 @@
 .icon:hover {
   opacity: 0.8;
 }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.image {
+  animation: fadeIn 1s ease-in-out;
+}
+
+@keyframes fadeLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.sectionButton {
+  animation: fadeLeft 1s ease-in-out;
+}
