--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -12,3 +12,41 @@
   color: #007bff;
   font-size: 18px;
 }
+
+.not_found_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  text-align: center;
+  background-color: #FDFAF0;
+  font-family: "Kelly Slab", serif;
+  font-weight: 400;
+  color: rgb(110, 121, 110);
+}
+
+.not_found_container h1 {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+
+.not_found_container p {
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.not_found_container h1 {
+  animation: fadeIn 1s ease-in-out;
+}
