--- a/frontend/src/pages/Errors/Error.module.css
+++ b/frontend/src/pages/Errors/Error.module.css
@@ -19,12 +19,27 @@
     height: auto;
 }
 
-.p {
+p {
     color: #FDFAF0;
     font-family: "Kelly Slab", serif;
     font-weight: 400;
-    font-size: 1rem;
+    font-style: bold;
     word-wrap: break-word;
     overflow-wrap: break-word;
     text-align: center;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+p {
+  animation: fadeIn 1s ease-in-out;
 }
