--- a/frontend/src/pages/Errors/ErrorLog.module.css
+++ b/frontend/src/pages/Errors/ErrorLog.module.css
@@ -13,12 +13,13 @@
     font-size: 1rem;
 }
 
-.p {
+p {
     color: #FDFAF0;
     font-family: "Kelly Slab", serif;
     font-weight: 400;
-    font-size: 1rem;
+    font-size: 1.5rem;
     word-wrap: break-word;
+    font-style: bold;
     overflow-wrap: break-word;
     text-align: center;
 }
@@ -36,6 +37,10 @@
   text-decoration: none;
   color: #FFDACA;
   border: 1px solid #FFDACA;
-  padding: 10px 20px;
+  padding: 7px 15px;
   border-radius: 12px;
+}
+
+.text {
+  font-size: 0.9rem;
 }
