--- a/frontend/src/components/Nav/Navbar.module.css
+++ b/frontend/src/components/Nav/Navbar.module.css
@@ -72,7 +72,7 @@
 }
 
 .nav .order{
-    color: #FFC4AC;
+    color: #D7E2D7;
     font-family: "Instrument Serif", serif;
     font-weight: 400;
     font-style: normal;
