--- a/frontend/src/pages/ItemList/ItemList.module.css
+++ b/frontend/src/pages/ItemList/ItemList.module.css
@@ -298,7 +298,8 @@
 }
 
 .searchContainer {
-  height: 76vh;
+  position: relative;
+  height: 80vh;
   background-color: #617061;
   width: 100%;
   display: flex;
@@ -308,17 +309,20 @@
   padding-top: 10vh;
   box-shadow: 0 60px 0 0 #fdb496;
   box-shadow: 0 0 15rem #617061;
+  border: none;
+  border-bottom-left-radius: 50% 20%;
+  border-bottom-right-radius: 50% 20%;
 }
 
 .searchOverlay {
   display: flex;
   background-color: none;
-  padding: 20px 40px;
-  border-radius: 7px 30px;
-  width: 40vh;
+  padding: 11px 20px;
+  border-radius: 17px;
+  width: 30vh;
   max-width: 500px;
   text-align: center;
-  height: 12px;
+  height: 40px;
   justify-content: center;
   align-items: center;
   border: 1px solid white;
@@ -326,15 +330,16 @@
 }
 
 .searchInput {
-  width: 90%;
+  width: 80%;
   padding: 10px;
   padding-left: 20px;
   border: 1px solid #ccc;
-  border-radius: 6px 20px;
+  border-radius: 6px;
   font-size: 1rem;
   outline: none;
-  height: 7px;
+  height: 5px;
   border: 2px solid #fdb496;
+  background-color: #F3F1EB;
 }
 
 .p_menu {
@@ -354,16 +359,16 @@
 .border {
   border: 2px solid #fdb496;
   border-radius: 10px;
-  padding: 10px 40px;
+  padding: 10px 30px;
   height: 170px;
-  margin-bottom: 10vh;
+  margin-bottom: 7vh;
   box-shadow: 0 0 1rem #fdb496;
 }
 
 .searchBorder {
     border: 1px solid #fdb496;
-    border-radius: 7px 40px;
-    padding: 15px 30px;
+    border-radius: 17px;
+    padding: 13px 25px;
     box-shadow: 0 0 1rem #fdb496;
 }
 
@@ -376,6 +381,7 @@
 
 .searchOverlay {
   position: relative;
+  position: relative;
 }
 
 .searchResults {
@@ -386,10 +392,10 @@
   width: 300px;
   background-color: #FDFAF0;
   border: 1px solid #ccc;
-  border-radius: 0 30px;
+  border-radius: 13px;
   max-height: 300px;
   overflow-y: auto;
-  z-index: 1000;
+  z-index: 1010;
   box-shadow: 0 0 1rem rgb(110, 121, 110);
   color: rgb(110, 121, 110);
   scrollbar-width: none;
