--- a/frontend/src/pages/ChatAI/ChatAI.module.css
+++ b/frontend/src/pages/ChatAI/ChatAI.module.css
@@ -247,3 +247,10 @@
   width: 50%;
   justify-content: right;
 }
+
+.addButton:disabled,
+.quantityButton:disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+  background-color: #ccc;
+}
