--- a/frontend/src/pages/Errors/ErrorLog.module.css
+++ b/frontend/src/pages/Errors/ErrorLog.module.css
@@ -5,19 +5,20 @@
     flex-flow: column;
     height: 100vh;
     width: 100%;
-    background-color: #617061;
-    color: #FDFAF0;
+    background-color: #FDFAF0;
+    color: #617061;
     font-family: "Kelly Slab", serif;
     font-weight: 400;
     font-style: normal;
     font-size: 1rem;
+    text-align: center;
 }
 
 .p {
-    color: #FDFAF0;
+    color: #617061;
     font-family: "Kelly Slab", serif;
     font-weight: 400;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     word-wrap: break-word;
     font-style: bold;
     overflow-wrap: break-word;
@@ -33,14 +34,24 @@
 
 .iconLink {
   display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-top: 7px;
   text-decoration: none;
-  color: #FFDACA;
-  border: 1px solid #FFDACA;
+  color: #617061;
+  border: 1px solid #617061;
   padding: 7px 15px;
-  border-radius: 12px;
+  border-radius: 30px;
+  height: 20vh;
+  width: 20vh;
 }
 
 .text {
   font-size: 0.9rem;
+}
+
+.icon {
+  width: 80%;
+  height: 80%;
 }
