--- a/frontend/src/pages/OrderPage/OrderPage.module.css
+++ b/frontend/src/pages/OrderPage/OrderPage.module.css
@@ -216,6 +216,7 @@
 
 .tablePopup h3 {
   margin-bottom: 20px;
+  font-size: 1.2rem;
   color: #333;
 }
 
@@ -240,7 +241,7 @@
 
 .popupCancelButton {
   flex: 1;
-  padding: 10px;
+  padding: 8px 3px;
   background-color: #2B3133;
   color: #F3F1EB;
   border: none;
@@ -252,7 +253,7 @@
 
 .popupConfirmButton {
   flex: 1;
-  padding: 10px;
+  padding: 8px 3px;
   background-color: #FDB496;
   color: #2B3133;
   border: none;
